--- a/portfolio.html
+++ b/portfolio.html
@@ -208,9 +208,9 @@
 
 
     <!------- ФУТЕР -------->
-    <footer class="footer"> 
-      <div class="container">
-        <div class="footer-kontakt">
+    <footer class="footer">
+    <div class="container">  
+      <div class="footer-kontakt">
         <address>
           <div class="footer-logo">
             <a href="./index.html" class=" logo-studio-footer text-none"
@@ -223,8 +223,7 @@
             href="https://goo.gl/maps/No9XGAybi4GthU8F9"
             target="_blank"
             rel="nooper noreferrer nofollow"
-            >м. Київ, пр-т Лесі Українки, 26</a
-          >
+            >м. Київ, пр-т Лесі Українки, 26</a>
         </li>
         <ul class="footer-ul list-non">
           <li>
@@ -239,7 +238,7 @@
           </li>
         </ul>
       </div>
-      <div class="footer-social">
+      <div class="soc-footer">
         <h3 class="footer-invite">приєднуйтесь</h3>
       <ul class="social-line list-non">
               <li class="social-line-footer">
@@ -267,20 +266,22 @@
                   </svg>
                 </a></li>
             </ul>
-    </div>       
-      </address> 
+    </div>
+
+          <form action="#">
       <label>
-      <div class="user-email">
-        <p class="spam">Підпишіться на розсилку</p>
+        <p class="spam">Підпишіться на розсилку</p>       
       <div class="footer-button">
       <input class="input-footer" type="email" name="user-email" id="user-email" required placeholder="E-mail">     
         <button type="submit" class="button-sign">Підписатися<svg class="footer-svg"  height="24" width="24">
                     <use href="./SVG/symbol-defs.svg#icon-icon-footer"></use>
                   </svg></button>   
       </div>
-      </div>
-    </label>     
-      </div>      
+    </label>
+    </form>
+
+    </div>
+      </address>
     </footer>
   </body>
 </html>
