--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
           
           <div>
             <input type="checkbox" name="consent" id="consent" class="input-checkbox visually-hidden" value="true"> 
-            <label class="checksbox-text" for="consent"><span><svg class="checkbox-vector" width="11" height="8">
+            <label class="checksbox-text" for="consent"><span><svg class="checkbox-vecto" width="11" height="8">
               <use href="./SVG/symbol-defs.svg#icon-Vector"></use>
             </svg></span> Погоджуюся з розсилкою та приймаю <p class="checksbox-text-back">Умови Договору</p></label>
           </div>
